# Mrowr-Purr-SKSE-Template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  ExampleProject.esp  LICENSE  PREPARE_AE.bat  PREPARE_SE.bat  PREPARE_VR.bat  README.md  prepare.bat  skyrimse.ppj  vcpkg-configuration.json  vcpkg.json
Scripts/: ExampleProjectPlayerRef.pex  ExampleProjectQuest.pex  ExampleProjectSpellEffect.pex  FOO.pex  MyPapyrusScript.pex
Scripts/Source/: ExampleProjectPlayerRef.psc  MyPapyrusScript.psc
Source/: ExampleProjectQuest.psc  ExampleProjectSpellEffect.psc
cmake/: x64-windows-skse.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/ExampleProjectTests/: CMakeLists.txt
